# steins-progress-logger

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
google_sheets_reader/: __init__.py  constants.py  environment_variables.py
google_sheets_reader/src/: assembler.py  fetcher.py  main.py  slack_client.py
src/: assembler.py  fetcher.py  main.py  progress_data.py  slack_client.py  team_members.py
